# Boids

./: CMakeLists.txt
include/: boid.hpp
src/: main.cpp
